--- a/Pagina porfolio/porfolio/index.html
+++ b/Pagina porfolio/porfolio/index.html
@@ -40,36 +40,36 @@
                 <div class="proyecto">
                     <img src="../imagenes/buzo.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>chica con buzo de peluche</p>
+                        <h3>Buzo de nubes</h3>
+                        <!-- <p>cabeza de alien</p>-->
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="../imagenes/cabeza.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>cabeza de alien</p>
+                        <h3>Cabeza de alien</h3>
+                        <!-- <p>cabeza de alien</p>-->
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="../imagenes/conejos.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>amor de conejos</p>
+                        <h3>Amor de conejos</h3>
+                         <!-- <p>cabeza de alien</p>-->
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="../imagenes/llaves.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>llave de los secretos</p>
+                        <h3>Llaves de los secretos</h3>
+                         <!-- <p>cabeza de alien</p>-->
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="../imagenes/orejass.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>no me mires</p>
+                        <h3>No me mires</h3>
+                         <!-- <p>cabeza de alien</p>-->
                     </div>
                 </div>
                 <div class="proyecto">
