--- a/Pagina porfolio/sobremi/index.html
+++ b/Pagina porfolio/sobremi/index.html
@@ -37,7 +37,7 @@
      <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, Soy Paloma Puerta.</span> Mi pasión es ser creativo y proactivo en todo lo que hago. Me encanta encontrar nuevas formas de abordar desafíos y tomar la iniciativa para hacer que las cosas sucedan. La creatividad es mi motor, y la proactividad es mi superpoder para convertir ideas en realidad. Estoy emocionado por seguir explorando y creciendo en este viaje lleno de posibilidades..</p>
+            <p><span>Hola, Soy Paloma Puerta.</span> Mi pasión es ser creativa y proactiva en todo lo que hago. Me encanta encontrar nuevas formas de abordar desafíos y tomar la iniciativa para hacer que las cosas sucedan. La creatividad es mi motor, y la proactividad es mi superpoder para convertir ideas en realidad. Estoy emocionado por seguir explorando y creciendo en este viaje lleno de posibilidades..</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -109,8 +109,8 @@
         </div>
     </section>
 
-    <!-- SECCION SKILLS -->
-    <section class="skills" id="skills">
+     <!-- SECCION SKILLS -->
+     <section class="skills" id="skills">
         <div class="contenido-seccion">
             <h2>Skills</h2>
             <div class="fila">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Drupa</span>
+                        <span>Drupal</span> <!-- Corregido aquí -->
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>55%</span>
@@ -188,6 +188,7 @@
                 </div>
             </div>
         </div>
+    </section>
     </section>
 
     <!-- SECCION CURRICULUM -->
@@ -259,5 +260,6 @@
             </div>
         </div>
     </section>
+
 </body>
 </html>
