--- a/Pagina porfolio/index.html
+++ b/Pagina porfolio/index.html
@@ -15,15 +15,14 @@
         <header>
             <div class="logo">
                 <a href="#">Palo </a>
-                <img src="" alt="">
+               
             </div>
             <nav id="nav">
                 <ul>
                     <li><a href="/index.html" >INICIO</a></li>
-                    <li><a href="/sobremi/index.html">SOBRE MI</a></li>
-                  
-                    <li><a href="/porfolio/index.html" >PORTFOLIO</a></li>
-                    <li><a href="/contactos/index.html">CONTACTO</a></li>
+                    <li><a href="./sobremi/index.html">SOBRE MI</a></li>
+                    <li><a href="./porfolio/index.html" >PORTFOLIO</a></li>
+                    <li><a href="./contactos/index.html">CONTACTO</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
